- Refactor: Remove legacy residence management module
- Refactor: Remove legacy delegate module
- Refactor: Remove legacy public relations module
- Refactor: Remove legacy rectorate module
- Refactor: Remove legacy alumni module
- Refactor: Remove legacy library module
- Refactor: Remove legacy pedagogical council module
- Refactor: Remove legacy department member module

32.14.0 (14-06-2022)
- Refactor: Add new method to check if enrolment in special season exists
- Refactor: Remove legacy curricular management functionalities

32.13.0 (07-06-2022)
- Bug Fix: Corrected english translation for group credits
- Refactor: Remove legacy curricular management functionalities
- Improvement: Add first time filter to student group

32.12.2 (02-06-2022)
- Bug Fix: Disconnect level on competence course deletion
- Bug Fix: Add missing competence course level erros messages
- Bug Fix: Avoid error on students export to excel file by teacher

32.12.1 (27-05-2022)
- Bug Fix: RegistrationConclusionBean should always use StudentCurricularPlan and ProgramConclusion precision
- Refactor: RegistrationConclusionBean constructor cleanup

32.12.0 (20-05-2022)
- Refactor: Competence course level as entity

32.11.3 (11-05-2022)
- Refactor: New statute type finders for registration

32.11.2 (09-05-2022)
- Bug Fix: Check if ingression code already exists

32.11.1 (05-05-2022)
- Bug Fix: Proper handle of degree delete

32.11.0 (20-04-2022)
- Improvement: Copy learning languages in Degree Info
- Bug Fix: Fix NPE on method CurricularCourse.getAutonomousWorkHours(CurricularPeriod, ExecutionInterval)
- Refactor: Add code to party type
- Refactor: Organizational structure API improvements

32.10.5 (29-03-2022)
- Improvement: Summary can be created as soon as lesson starts 

32.10.4 (23-03-2022)
- Bug Fix: External curriculum groups should not be considered for conclusion purposes

32.10.3 (08-03-2022)
- Bug Fix: Add delete method for PersistentSpecialCriteriaOverExecutionCourseGroup
